# appointments-impl/rest-openapi.yaml
@@ -14,6 +14,10 @@ components:
       required:
         - title
       type: object
+    Owner:
+      properties:
+        name:
+          type: string
 info:
   description: ""
   license:
@@ -160,5 +164,26 @@ paths:
             application/xml:
               schema:
                 $ref: "#/components/schemas/Appointment"
+          description: ""
+      tags: ["Appointment"]
+  "/appointments/{appointmentId}/owner":
+    get:
+      operationId: getAppointmentOwner
+      parameters:
+        - in: path
+          name: appointmentId
+          required: true
+          schema:
+            format: int64
+            type: integer
+      responses:
+        200:
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Owner"
+            application/xml:
+              schema:
+                $ref: "#/components/schemas/Owner"
           description: ""
       tags: ["Appointment"]
